# innovationist-tech-demo-api

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/content_sync/: change_stream.py  connection_manager.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py
app/core/db/: __init__.py  db_config.py
app/core/exceptions/: __init__.py  errors.py  exception_handlers.py
app/core/utils/: log_config.py  repo.py
app/health/: router.py  schemas.py  service.py
app/routes/: routes.py
tests/: conftest.py  test_content_sync.py  test_health.py
tests/integration/: test_content_sync_integration.py
